force-app/main/default/objects/pd_jp_20151124__CsvErrorLow__c/pd_jp_20151124__CsvErrorLow__c.object-meta.xml
<CustomObject>
    <label>MAPlusAC CsvErrorLow</label>
    <nameField>
        <displayFormat>CEL-{YYYY}{MM}-{0}</displayFormat>
        <label>CsvErrorLow名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>