force-app/main/default/objects/pd_jp_20151124__CsvErrorLow__c/fields/pd_jp_20151124__ColumnName__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ColumnName__c</fullName>
    <label>項目名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>