force-app/main/default/objects/pd_jp_20151124__CsvErrorLow__c/fields/pd_jp_20151124__CsvImportManager__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__CsvImportManager__c</fullName>
    <label>CsvImportManager</label>
    <referenceTo>pd_jp_20151124__CsvImportManager__c</referenceTo>
    <relationshipName>CsvErrorLows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>