force-app/main/default/objects/pd_jp_20151124__CsvErrorLow__c/fields/pd_jp_20151124__MessageContent__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__MessageContent__c</fullName>
    <label>メッセージ内容</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>